@@ -10,6 +10,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import lombok.val;
+
+import org.sopt.makers.internal.community.domain.enums.CommunityCategoryCode;
+import org.sopt.makers.internal.community.domain.enums.CommunityCategoryGroup;
+import org.sopt.makers.internal.community.domain.enums.CommunityPostSourceType;
+import org.sopt.makers.internal.community.domain.enums.CommunityPostTag;
 import org.sopt.makers.internal.community.utils.MentionCleaner;
 import org.sopt.makers.internal.community.domain.CommunityPost;
 import org.sopt.makers.internal.community.domain.anonymous.AnonymousProfile;
@@ -87,113 +92,192 @@ public class CommunityResponseMapper {
     }
 
     public PostUpdateResponse toPostUpdateResponse(CommunityPost post) {
-        return new PostUpdateResponse(post.getId(), post.getCategoryId(), post.getTitle(),
-                post.getContent(), post.getHits(), post.getImages(), post.getIsQuestion(),
+        return new PostUpdateResponse(post.getId(), post.getCategory().getCode(), post.getTitle(),
+                post.getContent(), post.getHits(), post.getImages(),
                 post.getIsBlindWriter(), post.getCreatedAt(), post.getUpdatedAt());
     }
 
     public PostSaveResponse toPostSaveResponse(CommunityPost post) {
-        return new PostSaveResponse(post.getId(), post.getCategoryId(), post.getTitle(),
-                post.getContent(), post.getHits(), post.getImages(), post.getIsQuestion(),
+        return new PostSaveResponse(post.getId(), post.getCategory().getCode(), post.getTitle(),
+                post.getContent(), post.getHits(), post.getImages(),
                 post.getIsBlindWriter(), post.getCreatedAt());
     }
 
-    public PostDetailResponse toPostDetailReponse(PostDetailData dto, Long viewerId, Boolean isLiked, Integer likes, AnonymousProfile anonymousProfile) {
+    public PostDetailResponse toPostDetailReponse(
+        PostDetailData dto,
+        Long viewerId,
+        Boolean isLiked,
+        Integer likes,
+        AnonymousProfile anonymousProfile
+    ) {
         val postEntity = dto.post();
         val authorDetails = dto.userDetails();
         val memberVo = postEntity.getIsBlindWriter()
-                ? null
-                : MemberVo.of(authorDetails, dto.authorCareer());
+            ? null
+            : MemberVo.of(authorDetails, dto.authorCareer());
 
         val isMine = Objects.equals(authorDetails.userId(), viewerId);
 
         val anonymousProfileVo = postEntity.getIsBlindWriter() && anonymousProfile != null
-                ? toAnonymousProfileVo(anonymousProfile)
-                : null;
+            ? toAnonymousProfileVo(anonymousProfile)
+            : null;
 
-        val postVo = toPostVo(postEntity, dto.vote());
+        val postVo = toPostVo(postEntity, dto.category(), dto.vote());
         val categoryVo = toCategoryResponse(dto.category());
 
         return new PostDetailResponse(memberVo, postVo, categoryVo, isMine, isLiked, likes, anonymousProfileVo);
     }
 
     public CategoryVo toCategoryResponse(Category category) {
-        if(category == null) return null;
-        val parentCategoryName = category.getParent() == null ? null : category.getParent().getName();
-        val parentId = category.getParent() == null ? null : category.getParent().getId();
-        return new CategoryVo(category.getId(), category.getName(), parentId, parentCategoryName);
+        if (category == null) {
+            return null;
+        }
+
+        CommunityCategoryCode parentCode = category.getParent() == null
+            ? null
+            : category.getParent().getCode();
+
+        String parentCategoryName = category.getParent() == null
+            ? null
+            : category.getParent().getName();
+
+        return new CategoryVo(
+            category.getCategoryGroup(),
+            category.getCode(),
+            category.getName(),
+            parentCode,
+            parentCategoryName
+        );
+    }
+
+    public CommunityPostVo toPostVo(
+        CommunityPost post,
+        Category category,
+        VoteResponse voteResponse
+    ) {
+        Category resolvedCategory = category != null ? category : post.getCategory();
+        return new CommunityPostVo(
+            post.getId(),
+            resolvedCategory == null ? null : resolvedCategory.getCategoryGroup(),
+            resolvedCategory == null ? null : resolvedCategory.getCode(),
+            post.getTitle(),
+            post.getContent(),
+            post.getHits(),
+            post.getImages(),
+            post.getIsBlindWriter(),
+            post.getSopticleUrl(),
+            post.getIsReported(),
+            post.getCreatedAt(),
+            post.getUpdatedAt(),
+            voteResponse
+        );
     }
 
     public CommunityPostVo toPostVo(CommunityPost post, VoteResponse voteResponse) {
-        return new CommunityPostVo(post.getId(), post.getCategoryId(), post.getTitle(), post.getContent(), post.getHits(),
-                post.getImages(), post.getIsQuestion(), post.getIsBlindWriter(), post.getSopticleUrl(), post.getIsReported(), post.getCreatedAt(), post.getUpdatedAt(),
-                voteResponse);
+        return toPostVo(post, post.getCategory(), voteResponse);
     }
 
-    public PostResponse toPostResponse (CommunityPostMemberVo dao, List<CommentInfo> commentInfos, Long memberId, AnonymousProfile anonymousProfile, Boolean isLiked, Integer likes, Map<Long, Boolean> commentLikedMap, Map<Long, Integer> commentLikeCountMap) {
+    public PostResponse toPostResponse(
+        CommunityPostMemberVo dao,
+        List<CommentInfo> commentInfos,
+        Long memberId,
+        AnonymousProfile anonymousProfile,
+        Boolean isLiked,
+        Integer likes,
+        Map<Long, Boolean> commentLikedMap,
+        Map<Long, Integer> commentLikeCountMap
+    ) {
         val post = dao.post();
         val category = dao.category();
         val member = dao.post().isBlindWriter() ? null : dao.member();
         val writerId = dao.post().isBlindWriter() ? null : dao.member().id();
         val isMine = Objects.equals(dao.member().id(), memberId);
+
         val comments = commentInfos.stream()
-                .map(info -> {
-                    Long commentId = info.commentDao().comment().getId();
-                    Boolean commentIsLiked = commentLikedMap.getOrDefault(commentId, false);
-                    Integer commentLikeCount = commentLikeCountMap.getOrDefault(commentId, 0);
-                    return toCommentResponse(info, memberId, commentIsLiked, commentLikeCount);
-                })
-                .collect(toList());
-        val anonymousProfileVo = dao.post().isBlindWriter() && anonymousProfile != null ? toAnonymousProfileVo(anonymousProfile) : null;
+            .map(info -> {
+                Long commentId = info.commentDao().comment().getId();
+                Boolean commentIsLiked = commentLikedMap.getOrDefault(commentId, false);
+                Integer commentLikeCount = commentLikeCountMap.getOrDefault(commentId, 0);
+                return toCommentResponse(info, memberId, commentIsLiked, commentLikeCount);
+            })
+            .collect(toList());
+
+        val anonymousProfileVo = dao.post().isBlindWriter() && anonymousProfile != null
+            ? toAnonymousProfileVo(anonymousProfile)
+            : null;
+
         val createdAt = getRelativeTime(dao.post().createdAt());
 
         return new PostResponse(
-                post.id(), member, writerId, isMine, isLiked, likes, post.categoryId(),
-                category.name(), post.title(), post.content(), post.hits(),
-                (int) comments.stream().filter(c -> !c.isDeleted()).count(), post.images(), post.isQuestion(), post.isBlindWriter(),
-                post.sopticleUrl(), anonymousProfileVo, createdAt, comments, dao.post().vote(), null
+            post.id(),
+            CommunityPostSourceType.COMMUNITY,
+            member,
+            writerId,
+            isMine,
+            isLiked,
+            likes,
+            category == null ? null : category.categoryGroup(),
+            category == null ? null : category.code(),
+            category == null ? null : category.name(),
+            List.of(),
+            post.title(),
+            post.content(),
+            post.hits(),
+            (int) comments.stream().filter(comment -> !comment.isDeleted()).count(),
+            post.images(),
+            post.isBlindWriter(),
+            post.sopticleUrl(),
+            anonymousProfileVo,
+            createdAt,
+            comments,
+            dao.post().vote(),
+            null
         );
     }
 
     public PostResponse toPostResponse(CrewPost crewPost, Long viewerId) {
         val crewUser = crewPost.user();
 
+        Long writerId = crewUser.orgId();
+
         val soptActivityVo = new SoptActivityVo(
-                crewUser.partInfo().generation(),
-                crewUser.partInfo().part(),
-                null
+            crewUser.partInfo().generation(),
+            crewUser.partInfo().part(),
+            null
         );
 
         val memberVo = new MemberVo(
-                crewUser.id(),
-                crewUser.name(),
-                crewUser.profileImage(),
-                soptActivityVo,
-                null
+            writerId,
+            crewUser.name(),
+            crewUser.profileImage(),
+            soptActivityVo,
+            null
         );
 
         return new PostResponse(
-                crewPost.id(),
-                memberVo,
-                crewUser.id(),
-                Objects.equals(crewUser.orgId(), viewerId),
-                crewPost.isLiked(),
-                crewPost.likeCount(),
-                24L,
-                "모임",
-                crewPost.title(),
-                crewPost.contents(),
-                crewPost.viewCount(),
-                crewPost.commentCount(),
-                crewPost.images(),
-                false,
-                false,
-                null,
-                null,
-                getRelativeTime(crewPost.createdDate()),
-                Collections.emptyList(),
-                null, // vote
-                crewPost.meetingId()
+            crewPost.id(),
+            CommunityPostSourceType.MEETING,
+            memberVo,
+            writerId,
+            Objects.equals(writerId, viewerId),
+            crewPost.isLiked(),
+            crewPost.likeCount(),
+            CommunityCategoryGroup.FREE,
+            CommunityCategoryCode.FREE,
+            "자유",
+            List.of(CommunityPostTag.MEETING),
+            crewPost.title(),
+            crewPost.contents(),
+            crewPost.viewCount(),
+            crewPost.commentCount(),
+            crewPost.images(),
+            false,
+            null,
+            null,
+            getRelativeTime(crewPost.createdDate()),
+            Collections.emptyList(),
+            null,
+            crewPost.meetingId()
         );
     }
 
@@ -209,18 +293,39 @@ public class CommunityResponseMapper {
         );
     }
 
-    public RecentPostResponse toRecentPostResponse(CommunityPost post, int likeCount, int commentCount, Long categoryId, String categoryName, Integer totalVoteCount) {
+    public RecentPostResponse toRecentPostResponse(
+        CommunityPost post,
+        int likeCount,
+        int commentCount,
+        CommunityPostTag categoryTag,
+        Integer totalVoteCount
+    ) {
         return new RecentPostResponse(
-                post.getId(),
-                post.getTitle(),
-                post.getContent(),
-                getRelativeTime(post.getCreatedAt()),
-                likeCount,
-                commentCount,
-                categoryId,
-                categoryName,
-                totalVoteCount,
-                commentCount > 0
+            post.getId(),
+            post.getTitle(),
+            post.getContent(),
+            getRelativeTime(post.getCreatedAt()),
+            likeCount,
+            commentCount,
+            categoryTag,
+            categoryTag == null ? null : categoryTag.getLabel(),
+            totalVoteCount
+        );
+    }
+
+    public RecentPostResponse toRecentPostResponse(CrewPost crewPost) {
+        CommunityPostTag categoryTag = CommunityPostTag.MEETING;
+
+        return new RecentPostResponse(
+            crewPost.id(),
+            crewPost.title(),
+            crewPost.contents(),
+            getRelativeTime(crewPost.createdDate()),
+            crewPost.likeCount(),
+            crewPost.commentCount(),
+            categoryTag,
+            categoryTag.getLabel(),
+            null
         );
     }
 
@@ -228,54 +333,119 @@ public class CommunityResponseMapper {
         return new AnonymousProfileVo(anonymousProfile.getNickname().getNickname(), anonymousProfile.getProfileImg().getImageUrl());
     }
 
-    public InternalPopularPostResponse toInternalPopularPostResponse(CommunityPost post, AnonymousProfile anonymousProfile, InternalUserDetails userDetails, String categoryName, int rank, String baseUrl) {
-        if (Boolean.TRUE.equals(post.getIsBlindWriter()) && anonymousProfile != null) {
+    public InternalPopularPostResponse toInternalPopularPostResponse(
+        CommunityPost post,
+        AnonymousProfile anonymousProfile,
+        InternalUserDetails userDetails,
+        String categoryName,
+        int rank,
+        String baseUrl
+    ) {
+        if (Boolean.TRUE.equals(post.getIsBlindWriter())) {
+            if (anonymousProfile == null) {
+                throw new IllegalStateException("anonymous profile is required for blind post");
+            }
+
             return InternalPopularPostResponse.builder()
-                    .id(post.getId())
-                    .userId(null)
-                    .profileImage(anonymousProfile.getProfileImg().getImageUrl())
-                    .name(anonymousProfile.getNickname().getNickname())
-                    .generationAndPart("")
-                    .rank(rank)
-                    .category(categoryName)
-                    .title(post.getTitle())
-                    .content(MentionCleaner.removeMentionIds(post.getContent()))
-                    .webLink(baseUrl + post.getId())
-                    .build();
-        } else {
-            SoptActivity lastActivity = userDetails.soptActivities().stream()
-                    .max(Comparator.comparing(SoptActivity::generation))
-                    .orElse(null);
-            String generationAndPart = String.format("%d기 %s", Objects.requireNonNull(lastActivity).generation(), lastActivity.part());
-            return InternalPopularPostResponse.builder()
-                    .id(post.getId())
-                    .userId(userDetails.userId())
-                    .profileImage(userDetails.profileImage())
-                    .name(userDetails.name())
-                    .generationAndPart(generationAndPart)
-                    .rank(rank)
-                    .category(categoryName)
-                    .title(post.getTitle())
-                    .content(MentionCleaner.removeMentionIds(post.getContent()))
-                    .webLink(baseUrl + post.getId())
-                    .build();
+                .id(post.getId())
+                .userId(null)
+                .profileImage(anonymousProfile.getProfileImg().getImageUrl())
+                .name(anonymousProfile.getNickname().getNickname())
+                .generationAndPart("")
+                .rank(rank)
+                .category(categoryName)
+                .title(post.getTitle())
+                .content(MentionCleaner.removeMentionIds(post.getContent()))
+                .webLink(baseUrl + post.getId())
+                .build();
         }
+
+        if (userDetails == null) {
+            throw new IllegalStateException("user details is required for non-blind post");
+        }
+
+        SoptActivity lastActivity = userDetails.soptActivities() == null
+            ? null
+            : userDetails.soptActivities().stream()
+              .max(Comparator.comparing(SoptActivity::generation))
+              .orElse(null);
+
+        String generationAndPart = lastActivity == null
+            ? ""
+            : String.format("%d기 %s", lastActivity.generation(), lastActivity.part());
+
+        return InternalPopularPostResponse.builder()
+            .id(post.getId())
+            .userId(userDetails.userId())
+            .profileImage(userDetails.profileImage())
+            .name(userDetails.name())
+            .generationAndPart(generationAndPart)
+            .rank(rank)
+            .category(categoryName)
+            .title(post.getTitle())
+            .content(MentionCleaner.removeMentionIds(post.getContent()))
+            .webLink(baseUrl + post.getId())
+            .build();
     }
 
-    public PopularPostResponse toPopularPostResponse(CommunityPost post, AnonymousProfile anonymousProfile, InternalUserDetails userDetails, String categoryName) {
+    public PopularPostResponse toPopularPostResponse(
+        CommunityPost post,
+        AnonymousProfile anonymousProfile,
+        InternalUserDetails userDetails,
+        int likeCount,
+        int commentCount,
+        CommunityPostTag categoryTag
+    ) {
         MemberNameAndProfileImageResponse memberResponse;
-        if (Boolean.TRUE.equals(post.getIsBlindWriter()) && anonymousProfile != null) {
+
+        if (Boolean.TRUE.equals(post.getIsBlindWriter())) {
+            if (anonymousProfile == null) {
+                throw new IllegalStateException("anonymous profile is required for blind post");
+            }
+
             memberResponse = new MemberNameAndProfileImageResponse(
-                    anonymousProfile.getId(),
-                    anonymousProfile.getNickname().getNickname(),
-                    anonymousProfile.getProfileImg().getImageUrl()
+                anonymousProfile.getId(),
+                anonymousProfile.getNickname().getNickname(),
+                anonymousProfile.getProfileImg().getImageUrl()
             );
         } else {
+            if (userDetails == null) {
+                throw new IllegalStateException("user details is required for non-blind post");
+            }
             memberResponse = MemberNameAndProfileImageResponse.from(userDetails);
         }
 
         return new PopularPostResponse(
-                post.getId(), categoryName, post.getTitle(), memberResponse, post.getHits()
+            post.getId(),
+            post.getTitle(),
+            memberResponse,
+            post.getHits(),
+            likeCount,
+            commentCount,
+            categoryTag,
+            categoryTag == null ? null : categoryTag.getLabel()
+        );
+    }
+
+    public PopularPostResponse toPopularPostResponse(CrewPost crewPost) {
+        CrewPost.CrewUser crewUser = crewPost.user();
+        CommunityPostTag categoryTag = CommunityPostTag.MEETING;
+
+        MemberNameAndProfileImageResponse memberResponse = new MemberNameAndProfileImageResponse(
+            crewUser.orgId(),
+            crewUser.name(),
+            crewUser.profileImage()
+        );
+
+        return new PopularPostResponse(
+            crewPost.id(),
+            crewPost.title(),
+            memberResponse,
+            crewPost.viewCount(),       // hits 의미: 조회수
+            crewPost.likeCount(),
+            crewPost.commentCount(),
+            categoryTag,
+            categoryTag.getLabel()
         );
     }
 
