@@ -1,13 +1,18 @@
 package org.sopt.makers.internal.vote.service;
 
+import java.util.Collections;
 import java.util.Comparator;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 import lombok.RequiredArgsConstructor;
 import org.sopt.makers.internal.community.domain.CommunityPost;
+import org.sopt.makers.internal.community.domain.category.Category;
+import org.sopt.makers.internal.community.domain.enums.CommunityCategoryGroup;
 import org.sopt.makers.internal.community.service.post.CommunityPostRetriever;
 import org.sopt.makers.internal.exception.BadRequestException;
 import org.sopt.makers.internal.member.domain.Member;
@@ -16,15 +21,15 @@ import org.sopt.makers.internal.vote.domain.Vote;
 import org.sopt.makers.internal.vote.domain.VoteOption;
 import org.sopt.makers.internal.vote.domain.VoteSelection;
 import org.sopt.makers.internal.vote.dto.request.VoteRequest;
-import org.sopt.makers.internal.vote.repository.VoteOptionRepository;
 import org.sopt.makers.internal.vote.dto.response.VoteOptionResponse;
 import org.sopt.makers.internal.vote.dto.response.VoteResponse;
+import org.sopt.makers.internal.vote.repository.VoteOptionRepository;
 import org.sopt.makers.internal.vote.repository.VoteRepository;
 import org.sopt.makers.internal.vote.repository.VoteSelectionRepository;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
-import org.springframework.http.HttpStatus;
 
 @Service
 @RequiredArgsConstructor
@@ -39,7 +44,11 @@ public class VoteService {
 
     @Transactional
     public void createVote(CommunityPost post, VoteRequest voteRequest) {
-        validateVotePolicy(post.getCategoryId(), voteRequest);
+        if (voteRequest == null) {
+            return;
+        }
+
+        validateVotePolicy(post.getCategory(), voteRequest);
 
         Vote vote = Vote.of(post, voteRequest.isMultiple(), voteRequest.voteOptions());
         voteRepository.save(vote);
@@ -50,7 +59,7 @@ public class VoteService {
         CommunityPost post = communityPostRetriever.findCommunityPostById(postId);
         Member member = memberRetriever.findMemberById(userId);
         Vote vote = voteRepository.findByPost(post)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "해당 게시글에는 투표가 존재하지 않습니다."));
+            .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "해당 게시글에는 투표가 존재하지 않습니다."));
 
         List<VoteOption> selectedOptions = voteOptionRepository.findAllById(selectedOptionIds);
 
@@ -72,51 +81,130 @@ public class VoteService {
 
     @Transactional(readOnly = true)
     public VoteResponse getVoteByPostId(Long postId, Long userId) {
-        Vote vote = voteRepository.findByPost(
-                communityPostRetriever.findCommunityPostById(postId)).orElse(null);
+        return getVoteMapByPostIds(List.of(postId), userId).get(postId);
+    }
 
-        if (vote == null) return null;
+    @Transactional(readOnly = true)
+    public Map<Long, VoteResponse> getVoteMapByPostIds(List<Long> postIds, Long memberId) {
+        if (postIds == null || postIds.isEmpty()) {
+            return Map.of();
+        }
 
-        Member member = memberRetriever.findMemberById(userId);
+        List<Long> distinctPostIds = postIds.stream()
+            .filter(Objects::nonNull)
+            .distinct()
+            .toList();
 
+        if (distinctPostIds.isEmpty()) {
+            return Map.of();
+        }
+
+        List<Vote> votes = voteRepository.findByPost_IdIn(distinctPostIds);
+
+        if (votes.isEmpty()) {
+            return Map.of();
+        }
+
+        List<Vote> distinctVotes = votes.stream()
+            .filter(Objects::nonNull)
+            .collect(Collectors.toMap(
+                Vote::getId,
+                vote -> vote,
+                (previous, current) -> previous
+            ))
+            .values()
+            .stream()
+            .toList();
+
+        List<Long> voteIds = distinctVotes.stream()
+            .map(Vote::getId)
+            .toList();
+
+        Map<Long, Integer> participantCountMap = voteSelectionRepository
+            .countDistinctMembersByVoteIds(voteIds)
+            .stream()
+            .collect(Collectors.toMap(
+                VoteSelectionRepository.VoteParticipantCountProjection::getVoteId,
+                projection -> projection.getParticipantCount().intValue()
+            ));
+
+        Map<Long, Set<Long>> selectedOptionIdsByVoteId = memberId == null
+            ? Map.of()
+            : voteSelectionRepository.findSelectedOptionIdsByVoteIdsAndMemberId(voteIds, memberId)
+              .stream()
+              .collect(Collectors.groupingBy(
+                  VoteSelectionRepository.MemberVoteSelectionProjection::getVoteId,
+                  Collectors.mapping(
+                      VoteSelectionRepository.MemberVoteSelectionProjection::getOptionId,
+                      Collectors.toSet()
+                  )
+              ));
+
+        Map<Long, VoteResponse> voteResponseMap = new HashMap<>();
+
+        for (Vote vote : distinctVotes) {
+            Long postId = vote.getPost().getId();
+            Set<Long> selectedOptionIds = selectedOptionIdsByVoteId.getOrDefault(vote.getId(), Collections.emptySet());
+            int participantCount = participantCountMap.getOrDefault(vote.getId(), 0);
+
+            voteResponseMap.put(
+                postId,
+                toVoteResponse(vote, participantCount, selectedOptionIds)
+            );
+        }
+
+        return voteResponseMap;
+    }
+
+    private VoteResponse toVoteResponse(
+        Vote vote,
+        int totalParticipants,
+        Set<Long> selectedOptionIds
+    ) {
         List<VoteOption> sortedOptions = vote.getVoteOptions().stream()
-                .sorted(Comparator.comparing(VoteOption::getId))
-                .collect(Collectors.toList());
+            .sorted(Comparator.comparing(VoteOption::getId))
+            .toList();
 
-        // 총 투표자 계산
-        int totalParticipants = voteSelectionRepository.countDistinctMembersByVote(vote);
+        boolean hasVoted = selectedOptionIds != null && !selectedOptionIds.isEmpty();
 
-        // 유저가 투표했는지 여부 및 선택한 옵션 ID 조회
-        List<VoteSelection> selections = voteSelectionRepository.findByVoteOptionInAndMember(sortedOptions, member);
-        boolean hasVoted = !selections.isEmpty();
-        Set<Long> selectedOptionIds = selections.stream()
-                .map(selection -> selection.getVoteOption().getId())
-                .collect(Collectors.toSet());
+        int totalVoteCount = sortedOptions.stream()
+            .mapToInt(VoteOption::getVoteCount)
+            .sum();
 
         List<VoteOptionResponse> optionsResponse = sortedOptions.stream()
-                .map(option -> new VoteOptionResponse(
-                        option.getId(),
-                        option.getContent(),
-                        option.getVoteCount(),
-                        calculateVotePercent(option.getVoteCount(), sortedOptions.stream().mapToInt(VoteOption::getVoteCount).sum()),
-                        selectedOptionIds.contains(option.getId()))
-                ).toList();
-        return new VoteResponse(vote.getId(), vote.isMultipleOptions(), hasVoted, totalParticipants, optionsResponse);
+            .map(option -> new VoteOptionResponse(
+                option.getId(),
+                option.getContent(),
+                option.getVoteCount(),
+                calculateVotePercent(option.getVoteCount(), totalVoteCount),
+                selectedOptionIds != null && selectedOptionIds.contains(option.getId())
+            ))
+            .toList();
+
+        return new VoteResponse(
+            vote.getId(),
+            vote.isMultipleOptions(),
+            hasVoted,
+            totalParticipants,
+            optionsResponse
+        );
     }
 
     private int calculateVotePercent(int voteCount, int totalCount) {
-        if (totalCount == 0) return 0;
+        if (totalCount == 0) {
+            return 0;
+        }
+
         return (int) Math.round((double) voteCount * 100 / totalCount);
     }
 
-    private void validateVotePolicy(Long categoryId, VoteRequest vote) {
-        if (Objects.isNull(vote)) return;
-
-        if (Objects.equals(categoryId, 21L)) {
+    private void validateVotePolicy(Category category, VoteRequest vote) {
+        if (category != null && category.getCategoryGroup() == CommunityCategoryGroup.SOPTICLE) {
             throw new BadRequestException("솝티클 카테고리는 투표를 만들 수 없습니다.");
         }
 
         List<String> options = vote.voteOptions();
+
         if (options == null || options.size() < 2 || options.size() > 5) {
             throw new BadRequestException("투표 옵션은 2개 이상 5개 이하만 가능합니다.");
         }
@@ -125,6 +213,7 @@ public class VoteService {
             if (option == null || option.trim().isEmpty()) {
                 throw new BadRequestException("투표 옵션 내용은 공백일 수 없습니다.");
             }
+
             if (option.length() > 40) {
                 throw new BadRequestException("투표 옵션은 40자까지만 입력 가능합니다.");
             }
@@ -139,6 +228,7 @@ public class VoteService {
 
         // 선택한 옵션이 존재하지 않는 경우 체크
         List<VoteOption> selectedOptions = voteOptionRepository.findAllById(selectedOptionIds);
+
         if (selectedOptions.size() != selectedOptionIds.size()) {
             throw new BadRequestException("존재하지 않는 투표 옵션이 포함되어 있습니다.");
         }
